--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -6,7 +6,12 @@ CFLAGS = -Wall -Wextra -Werror -std=c++98 -Iincludes -g -gdwarf-4
 SRC_DIR = srcs
 OBJ_DIR = objs
 
-SRC = srcs/main.cpp srcs/AMateria.cpp
+SRC = srcs/main.cpp \
+			srcs/AMateria.cpp \
+			srcs/Character.cpp \
+			srcs/Cure.cpp \
+			srcs/Ice.cpp \
+			srcs/MateriaSource.cpp
 
 OBJ = $(SRC:$(SRC_DIR)/%.cpp=$(OBJ_DIR)/%.o)
 
